# python_backend_filatova

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
core/config/: config.py  database.py  dependencies.py
inaccuracy/: inaccuracy.xlsx  inaccuracytest.xlsx  router.py  schema.py  service.py
message/: model.py  repository.py  router.py  schema.py  service.py
product/: model.py  repository.py  router.py  schema.py  service.py
report/: model.py  repository.py  router.py  schema.py  service.py
report_data/: model.py  repository.py  schema.py  service.py
user/: model.py  repository.py  router.py  schema.py  service.py
utils/: authenticate.py  jwt_auth.py
